fixed button aligned and made them unclickabled once game stops

--- a/Rugby scoreboard/style.css
+++ b/Rugby scoreboard/style.css
@@ -5,23 +5,6 @@
 } */
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 #scoreBoard {
     display: none;
 }
@@ -34,7 +17,6 @@
 
 .row{
     display: flex;
-    justify-content: space-between;
     align-items: center;
     font-size:20px;
 }
@@ -89,12 +71,12 @@ p {
 }
 
 #resetButton {
-    background-color: blue;
-    font-size:40px;
-    color: white;
+    background-color: #ececec;
+    font-size: 16px;
+    color: #1f1f1f;
     font-family: Arial, Helvetica, sans-serif;
-    border-radius: 15px;
-    padding: 25px;
+    border-radius: 5px;
+    padding: 15px;
 }
 
 .title {
@@ -111,7 +93,18 @@ p {
     display: flex;
     align-items: center;
     justify-content: center;
+    font-size:100%;
+    cursor: pointer;
     /* border: none; */
+}
+
+.plusButton:hover {
+    background-color: #f1f1f1;
+}
+
+.plusButton:disabled {
+    cursor:not-allowed;
+    opacity: 0.7;
 }
 
 .button {
@@ -150,3 +143,16 @@ p {
     border-radius: 15px;
     padding: 25px;
 }
+
+.scoreTitle {
+    flex:1;
+}
+.team1{
+    flex:1;
+}
+
+.team2 {
+    flex:1;
+}
+
+/* add class name to the left buttons and then seperate for the right buttons and add margin left and margin right*/
